Use ArrayList instead of LinkedList
Much less GC - less iterators, lest next items, etc.